# Ia-ab2

./: IA.py  README.md
Parte 2.1/: README.md  demo.py  experimentos.py  inference_engine.py  knowledge_base.py  main.py  relatorio_tecnico.md
Parte 2.4/: README.md  cbr_engine.py  demo.py  exemplo_saida_demo.txt  main.py  relatorio_tecnico.docx
parte 3/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
parte 3/docs/: relatorio.md
parte 3/src/: agent.py  config.py  llm_client.py  tools.py
parte 3/tests/: test_agent.py  test_tools.py
